# cppdict

./: .gitignore  CMakeLists.txt  README.md  bind.cpp  dict.h  example.cpp  test.cpp
